# SHOTS

./: README.md
src/arm_controller/: CMakeLists.txt  package.xml
src/arm_controller/launch/: arm-poit.launch  arm.launch
src/arm_controller/src/: arm_control_call.py  control copy.cpp  control.cpp  controller.py  controller1.py  gripper_test.py
src/arm_controller/srv/: ArmControl.srv  GripperControl.srv
src/cloud_merger/: CMakeLists.txt  package.xml
src/cloud_merger/config/: Clouds.yaml
src/cloud_merger/launch/: Starter.launch
src/cloud_merger/src/: CloudMerger.cpp  node.cpp
src/count/: CMakeLists.txt  package.xml
src/count/launch/: lengthcount.launch
src/count/src/: lengthcount.py  maincount.py  octomapcount.cpp  test.txt
src/depth2octomap/: CMakeLists.txt  package.xml
src/depth2octomap/launch/: octomaptransform.launch
src/depth2octomap/src/: depth2octomap.cpp
src/fkie-nbv-planner/: 123.rviz  CMakeLists.txt  package.xml
src/fkie-nbv-planner/config/: nbv_planner_freespace_fast.yaml
src/fkie-nbv-planner/include/fkie_nbv_planner/: NBVPlanner.h  utils.hpp
src/fkie-nbv-planner/include/octomap_generator/: octomap_generator.h  octomap_generator_base.h  octomap_generator_ros.h
src/fkie-nbv-planner/include/semantics_octree/: semantics_octree.h  semantics_octree.hxx
src/fkie-nbv-planner/launch/: arm-poit.launch  client.launch  octomap_server.launch  perception.launch  run_planner.launch  semantic_mapping.launch
src/fkie-nbv-planner/lib/: libCGAL.so.13  libCGAL.so.13.0.2  libCGAL_Core.so.13  libCGAL_Core.so.13.0.2  libCGAL_ImageIO.so.13  libCGAL_ImageIO.so.13.0.2  libCGAL_Qt5.so.13  libCGAL_Qt5.so.13.0.2
src/fkie-nbv-planner/params/: octomap_generator.yaml  semantic_cloud.yaml
src/fkie-nbv-planner/scripts/: camera_pose_tf.py  client.py  clip_detection.py  clip_explainability.py  color_pcl_generator.py  odom2Posestamped.py  semantic_cloud.py
src/fkie-nbv-planner/src/: NBVPlanner.cpp  RRTNode.cpp  arm_control_call.py  object_goal_decompose.py  real_robot.py  test_real_robot.py
src/fkie-nbv-planner/src/octomap_generator/: .swp  octomap_generator.cpp  octomap_generator_ros.cpp  octomap_test.cpp
src/fkie-nbv-planner/srv/: SetObjPose.srv
src/fkie_ddynamic_reconfigure/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/fkie_ddynamic_reconfigure/include/fkie_ddynamic_reconfigure/: GlobalParameters.h  ddynamic_reconfigure.h  ddynamic_reconfigure_utils.h  registered_param.h
src/fkie_ddynamic_reconfigure/src/: GlobalParameters.cpp  ddynamic_reconfigure.cpp
src/fkie_ddynamic_reconfigure/test/: GlobalParameters.test  MyGlobalParameters.h  ddynamic_reconfigure.test  ddynamic_reconfigure_auto_update_test.cpp  fake_dynamic_reconfigure_server.cpp  test_GlobalParameters.cpp  test_bool_dynamic_reconfigure_server.cpp  test_ddynamic_reconfigure.cpp
src/fkie_environmental_measurements/: README.md
src/fkie_environmental_measurements/fkie_measurement/: CMakeLists.txt  README.md  package.xml
src/fkie_environmental_measurements/fkie_measurement_msgs/: CMakeLists.txt  README.md  package.xml
src/fkie_environmental_measurements/fkie_measurement_msgs/action/: ExplorePolygon3D.action  RequestBoundaryPolygons.action  RequestGaussianInterpolation.action
src/fkie_environmental_measurements/fkie_measurement_msgs/msg/: BoundaryPolygon.msg  Measurement.msg  MeasurementArray.msg  MeasurementEstimation.msg  MeasurementEstimationValue.msg  MeasurementGaussianStatistics.msg  MeasurementLocated.msg  MeasurementValue.msg
src/fkie_environmental_measurements/fkie_measurement_sensor_simulator/: CMakeLists.txt  README.md  package.xml
src/fkie_environmental_measurements/fkie_measurement_sensor_simulator/config/: sensor_simulator.rviz  sensor_simulator_config.yaml
src/fkie_environmental_measurements/fkie_measurement_sensor_simulator/include/fkie_measurement_sensor_simulator/: SensorServerDescription.hpp  SourceDescription.hpp  structs.hpp
src/fkie_environmental_measurements/fkie_measurement_sensor_simulator/launch/: sensor_simulator.launch
src/fkie_environmental_measurements/fkie_measurement_sensor_simulator/src/: SensorSimulator.cpp  SensorSimulator.h  SensorSimulatorNode.cpp
src/fkie_environmental_measurements/fkie_measurement_server/: CMakeLists.txt  README.md  package.xml  setup.py
src/fkie_environmental_measurements/fkie_measurement_server/config/: measurement_server.rviz  measurement_server_configs.yaml  sensor_simulator_config.yaml
src/fkie_environmental_measurements/fkie_measurement_server/data/: measurements.xml
src/fkie_environmental_measurements/fkie_measurement_server/launch/: measurement_server.launch
src/fkie_environmental_measurements/fkie_measurement_server/nodes/: measurement_server_node.py
src/fkie_environmental_measurements/fkie_measurement_server/src/fkie_measurement_server/: MeasurementInterfaces.py  MeasurementPublisher.py  MeasurementServer.py  ParameterManager.py  __init__.py  utils.py
src/fkie_environmental_measurements/fkie_measurement_server/src/fkie_measurement_server/classes/: GridContainer.py  IndexGrid.py  TypedMeasurement.py  __init__.py
src/fkie_environmental_measurements/fkie_measurement_server/src/fkie_measurement_server/modules/: BoundaryPolygonModule.py  InterpolationModule.py  SourceLocalizationModule.py  __init__.py
src/fkie_environmental_measurements/fkie_measurement_tools/: CMakeLists.txt  README.md  package.xml
src/fkie_environmental_measurements/fkie_measurement_tools/src/: MeasurementsToPointCloud.cpp  MeasurementsToPointCloud.h  MeasurementsToPointCloudParameters.hpp  OccupancyGridToPointCloud.cpp  OccupancyGridToPointCloud.h  OccupancyGridToPointCloudParameters.hpp  measurements_to_point_cloud.cpp  occupancy_grid_to_point_cloud.cpp
src/goal_sender/: CMakeLists.txt  packages.xml
src/goal_sender/launch/: arm-poit.launch
src/goal_sender/src/: husky_goal.py
src/husky_ur5/: CMakeLists.txt  package.xml
src/husky_ur5/config/: ur5.srdf  (+5 more)
src/local_planner/: CMakeLists.txt  package.xml
src/object_detection/: CMakeLists.txt  package.xml
src/pcl_configure/: CMakeLists.txt  package.xml
(+337 files in other folders)
