<?xml version="1.0"?>
<package format="2">
  <name>fkie_measurement_msgs</name>
  <version>0.0.0</version>
  <description>The fkie_measurement_msgs package</description>

  <author email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</author>
  <maintainer email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
