<?xml version="1.0"?>
<package format="2">
  <name>fkie_measurement_server</name>
  <version>0.0.0</version>
  <description>The fkie_measurement_server package</description>

  <author email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</author>
  <maintainer email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>fkie_measurement_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>python3-sklearn</depend>
  <depend>python3-skimage</depend>
  <depend>python3-scipy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
